--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Burger Landing</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./btn_up.css">
 </head>
 <body>
 <header class="header">
@@ -18,10 +19,10 @@
         <nav class="header__nav">
             <ul class="header__list">
                 <li><a class="active" href="#!">HOME</a></li>
-                <li><a href="#!">PAGES</a></li>
-                <li><a href="#!">OUR OFFER</a></li>
-                <li><a href="#!">PRICING</a></li>
-                <li><a href="#!">SHOP</a></li>
+                <li><a href="#pages">PAGES</a></li>
+                <li><a href="#offer">OUR OFFER</a></li>
+                <li><a href="#shop">SHOP</a></li>
+                <li><a href="#price">PRICING</a></li>
             </ul>
         </nav>
 
@@ -44,7 +45,7 @@
         </div>
     </section>
 
-    <section class="food-list">
+    <section class="food-list" id="pages">
         <div class="container">
             <div class="food-list__card">
                 <img src="./images/food-list-1.jpg" alt="" class="food-list__img">
@@ -77,7 +78,7 @@
         </div>
     </section>
 
-    <section class="order">
+    <section class="order" id="offer">
         <div class="container">
             <img src="./images/burger.png" alt="" class="order__img">
             <div class="order__text">
@@ -91,7 +92,7 @@
         </div>
     </section>
 
-    <section class="product">
+    <section class="product" id="shop">
         <div class="container">
             <div class="product__card card-queen">
                 <h4 class="product__title">Dairy Queen</h4>
@@ -137,7 +138,7 @@
         </div>
     </div>
 
-    <div class="download">
+    <div class="download" id="price">
         <div class="container">
             <p class="download__title">Download Our Menu</p>
             <a href="./images/burger.png" class="btn" download>DOWNLOAD</a>
@@ -191,5 +192,8 @@
         </div>
     </div>
 </footer>
+
+<script src="btn_up.js"></script>
+
 </body>
 </html>
